# serializer version: 1
# name: TestCreate.test[True][index]
  dict({
    '_id': 'fb085f7f',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'has_files': True,
    'has_json': False,
    'job': dict({
      'id': 'bf1b993c',
    }),
    'manifest': dict({
      'bar': 2,
      'foo': 1,
    }),
    'ready': False,
    'reference': dict({
      'id': 'foo',
    }),
    'user': dict({
      'id': 1,
    }),
    'version': 0,
  })
# ---
# name: TestCreate.test[True][job]
  dict({
    '_id': 'bf1b993c',
    'acquired': False,
    'args': dict({
      'index_id': 'fb085f7f',
      'index_version': 0,
      'manifest': dict({
        'bar': 2,
        'foo': 1,
      }),
      'ref_id': 'foo',
      'user_id': 1,
    }),
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'key': None,
    'ping': None,
    'rights': dict({
    }),
    'space': dict({
      'id': 0,
    }),
    'state': 'waiting',
    'status': list([
      dict({
        'error': None,
        'progress': 0,
        'stage': None,
        'state': 'waiting',
        'step_description': None,
        'step_name': None,
        'timestamp': datetime.datetime(2015, 10, 6, 20, 0),
      }),
    ]),
    'user': dict({
      'id': 1,
    }),
    'workflow': 'build_index',
  })
# ---
# name: TestCreate.test[True][json]
  dict({
    'change_count': 1,
    'contributors': list([
      dict({
        'count': 1,
        'handle': 'myersmitchell',
        'id': 2,
      }),
    ]),
    'created_at': '2015-10-06T20:00:00Z',
    'files': list([
    ]),
    'has_files': True,
    'id': 'fb085f7f',
    'job': dict({
      'created_at': '2015-10-06T20:00:00Z',
      'id': 'bf1b993c',
      'progress': 0,
      'retries': 0,
      'stage': None,
      'state': 'waiting',
      'user': dict({
        'handle': 'leeashley',
        'id': 1,
      }),
      'workflow': 'build_index',
    }),
    'manifest': dict({
      'bar': 2,
      'foo': 1,
    }),
    'modified_otu_count': 0,
    'otus': list([
    ]),
    'ready': False,
    'reference': dict({
      'data_type': 'genome',
      'id': 'foo',
      'name': 'Foo',
    }),
    'user': dict({
      'handle': 'leeashley',
      'id': 1,
    }),
    'version': 0,
  })
# ---
# name: TestCreate.test[True][location]
  'https://virtool.example.com/indexes/fb085f7f'
# ---
# name: TestFind.test
  dict({
    'change_count': 12,
    'documents': list([
      dict({
        'change_count': 4,
        'created_at': '2015-10-06T20:00:00Z',
        'has_files': True,
        'id': 'bar',
        'job': dict({
          'created_at': '2015-10-06T20:00:00Z',
          'id': 'bf1b993c',
          'progress': 60,
          'retries': 0,
          'stage': 'ZbutjsGXUcnbBDTlOUGA',
          'state': 'cancelled',
          'user': dict({
            'handle': 'myersmitchell',
            'id': 2,
          }),
          'workflow': 'build_index',
        }),
        'modified_otu_count': 3,
        'ready': False,
        'reference': dict({
          'data_type': 'genome',
          'id': 'bar',
          'name': 'Bar',
        }),
        'user': dict({
          'handle': 'myersmitchell',
          'id': 2,
        }),
        'version': 1,
      }),
      dict({
        'change_count': 2,
        'created_at': '2015-10-06T20:00:00Z',
        'has_files': True,
        'id': 'foo',
        'job': dict({
          'created_at': '2015-10-06T20:00:00Z',
          'id': 'fb085f7f',
          'progress': 0,
          'retries': 0,
          'stage': None,
          'state': 'waiting',
          'user': dict({
            'handle': 'myersmitchell',
            'id': 2,
          }),
          'workflow': 'build_index',
        }),
        'modified_otu_count': 2,
        'ready': False,
        'reference': dict({
          'data_type': 'genome',
          'id': 'foo',
          'name': 'Foo',
        }),
        'user': dict({
          'handle': 'myersmitchell',
          'id': 2,
        }),
        'version': 0,
      }),
    ]),
    'found_count': 2,
    'modified_otu_count': 3,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 2,
    'total_otu_count': 123,
  })
# ---
# name: TestFind.test_ready
  list([
    dict({
      'change_count': 0,
      'created_at': '2015-10-06T20:00:00Z',
      'has_files': True,
      'id': 'daz',
      'job': dict({
        'created_at': '2015-10-06T20:00:00Z',
        'id': 'bf1b993c',
        'progress': 3,
        'retries': 0,
        'stage': None,
        'state': 'preparing',
        'user': dict({
          'handle': 'myersmitchell',
          'id': 2,
        }),
        'workflow': 'nuvs',
      }),
      'modified_otu_count': 0,
      'ready': True,
      'reference': dict({
        'data_type': 'genome',
        'id': 'foo',
        'name': 'Foo',
      }),
      'user': dict({
        'handle': 'myersmitchell',
        'id': 2,
      }),
      'version': 0,
    }),
    dict({
      'change_count': 0,
      'created_at': '2015-10-06T22:00:00Z',
      'has_files': True,
      'id': 'bot',
      'job': dict({
        'created_at': '2015-10-06T20:00:00Z',
        'id': 'bf1b993c',
        'progress': 3,
        'retries': 0,
        'stage': None,
        'state': 'preparing',
        'user': dict({
          'handle': 'myersmitchell',
          'id': 2,
        }),
        'workflow': 'nuvs',
      }),
      'modified_otu_count': 0,
      'ready': True,
      'reference': dict({
        'data_type': 'genome',
        'id': 'bar',
        'name': 'Bar',
      }),
      'user': dict({
        'handle': 'myersmitchell',
        'id': 2,
      }),
      'version': 1,
    }),
  ])
# ---
# name: test_finalize[404_reference]
  dict({
    'id': 'not_found',
    'message': 'Not found',
  })
# ---
# name: test_finalize[409_fasta]
  dict({
    'id': 'conflict',
    'message': 'A FASTA file must be uploaded in order to finalize index',
  })
# ---
# name: test_finalize[409_genome]
  dict({
    'id': 'conflict',
    'message': 'Reference requires that all Bowtie2 index files have been uploaded. Missing files: reference.1.bt2, reference.2.bt2, reference.3.bt2, reference.4.bt2, reference.rev.1.bt2, reference.rev.2.bt2',
  })
# ---
# name: test_finalize[None]
  dict({
    'change_count': 0,
    'contributors': list([
    ]),
    'created_at': '2015-10-06T20:00:00Z',
    'files': list([
      dict({
        'download_url': '/indexes/test_index/files/reference.fa.gz',
        'id': 1,
        'index': 'test_index',
        'name': 'reference.fa.gz',
        'size': 9000,
        'type': 'fasta',
      }),
      dict({
        'download_url': '/indexes/test_index/files/reference.json.gz',
        'id': 2,
        'index': 'test_index',
        'name': 'reference.json.gz',
        'size': 9000,
        'type': 'json',
      }),
      dict({
        'download_url': '/indexes/test_index/files/reference.1.bt2',
        'id': 3,
        'index': 'test_index',
        'name': 'reference.1.bt2',
        'size': 9000,
        'type': 'bowtie2',
      }),
      dict({
        'download_url': '/indexes/test_index/files/reference.2.bt2',
        'id': 4,
        'index': 'test_index',
        'name': 'reference.2.bt2',
        'size': 9000,
        'type': 'bowtie2',
      }),
      dict({
        'download_url': '/indexes/test_index/files/reference.3.bt2',
        'id': 5,
        'index': 'test_index',
        'name': 'reference.3.bt2',
        'size': 9000,
        'type': 'bowtie2',
      }),
      dict({
        'download_url': '/indexes/test_index/files/reference.4.bt2',
        'id': 6,
        'index': 'test_index',
        'name': 'reference.4.bt2',
        'size': 9000,
        'type': 'bowtie2',
      }),
      dict({
        'download_url': '/indexes/test_index/files/reference.rev.1.bt2',
        'id': 7,
        'index': 'test_index',
        'name': 'reference.rev.1.bt2',
        'size': 9000,
        'type': 'bowtie2',
      }),
      dict({
        'download_url': '/indexes/test_index/files/reference.rev.2.bt2',
        'id': 8,
        'index': 'test_index',
        'name': 'reference.rev.2.bt2',
        'size': 9000,
        'type': 'bowtie2',
      }),
    ]),
    'has_files': True,
    'id': 'test_index',
    'job': dict({
      'created_at': '2015-10-06T20:00:00Z',
      'id': 'bf1b993c',
      'progress': 3,
      'retries': 0,
      'stage': None,
      'state': 'preparing',
      'user': dict({
        'handle': 'leeashley',
        'id': 1,
      }),
      'workflow': 'build_index',
    }),
    'manifest': dict({
      'foo': 4,
    }),
    'modified_otu_count': 0,
    'otus': list([
    ]),
    'ready': True,
    'reference': dict({
      'data_type': 'genome',
      'id': 'hxn167',
      'name': 'Test A',
    }),
    'user': dict({
      'handle': 'leeashley',
      'id': 1,
    }),
    'version': 2,
  })
# ---
# name: test_finalize[None].1
  dict({
    '_id': '6116cba1',
    'abbreviation': 'PVF',
    'isolates': list([
      dict({
        'default': True,
        'id': 'cab8b360',
        'source_name': '8816-v2',
        'source_type': 'isolate',
      }),
    ]),
    'last_indexed_version': 1,
    'lower_name': 'prunus virus f',
    'name': 'Prunus virus F',
    'reference': dict({
      'id': 'hxn167',
    }),
    'remote_id': None,
    'schema': list([
    ]),
    'verified': False,
    'version': 1,
  })
# ---
# name: test_find_history[None]
  dict({
    'documents': list([
      dict({
        'created_at': '2015-10-06T20:00:00Z',
        'description': 'Edited sequence wrta20tr in Islolate chilli-CR',
        'id': 'kjs8sa99.3',
        'index': dict({
          'id': 'foobar',
          'version': 0,
        }),
        'method_name': 'edit_sequence',
        'otu': dict({
          'id': 'kjs8sa99',
          'name': 'Foo',
          'version': 3,
        }),
        'reference': dict({
          'data_type': 'genome',
          'id': 'foo',
          'name': 'Foo',
        }),
        'user': dict({
          'handle': 'myersmitchell',
          'id': 2,
        }),
      }),
      dict({
        'created_at': '2015-10-06T20:00:00Z',
        'description': 'Added Unnamed Isolate as default',
        'id': 'zxbbvngc.2',
        'index': dict({
          'id': 'foobar',
          'version': 0,
        }),
        'method_name': 'add_isolate',
        'otu': dict({
          'id': 'zxbbvngc',
          'name': 'Test',
          'version': 2,
        }),
        'reference': dict({
          'data_type': 'genome',
          'id': 'foo',
          'name': 'Foo',
        }),
        'user': dict({
          'handle': 'modonnell',
          'id': 3,
        }),
      }),
      dict({
        'created_at': '2015-10-06T20:00:00Z',
        'description': 'Added Unnamed Isolate as default',
        'id': 'zxbbvngc.1',
        'index': dict({
          'id': 'foobar',
          'version': 0,
        }),
        'method_name': 'add_isolate',
        'otu': dict({
          'id': 'zxbbvngc',
          'name': 'Test',
          'version': 1,
        }),
        'reference': dict({
          'data_type': 'genome',
          'id': 'foo',
          'name': 'Foo',
        }),
        'user': dict({
          'handle': 'myersmitchell',
          'id': 2,
        }),
      }),
      dict({
        'created_at': '2015-10-06T20:00:00Z',
        'description': 'Added Unnamed Isolate as default',
        'id': 'zxbbvngc.0',
        'index': dict({
          'id': 'foobar',
          'version': 0,
        }),
        'method_name': 'add_isolate',
        'otu': dict({
          'id': 'zxbbvngc',
          'name': 'Test',
          'version': 0,
        }),
        'reference': dict({
          'data_type': 'genome',
          'id': 'foo',
          'name': 'Foo',
        }),
        'user': dict({
          'handle': 'myersmitchell',
          'id': 2,
        }),
      }),
    ]),
    'found_count': 4,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 4,
  })
# ---
# name: test_get[None]
  dict({
    'change_count': 2,
    'contributors': list([
      dict({
        'count': 1,
        'handle': 'fred',
        'id': 1,
      }),
      dict({
        'count': 3,
        'handle': 'ian',
        'id': 2,
      }),
    ]),
    'created_at': '2015-10-06T20:00:00Z',
    'files': list([
    ]),
    'has_files': True,
    'id': 'foobar',
    'job': dict({
      'created_at': '2015-10-06T20:00:00Z',
      'id': 'bf1b993c',
      'progress': 60,
      'retries': 0,
      'stage': 'ZbutjsGXUcnbBDTlOUGA',
      'state': 'cancelled',
      'user': dict({
        'handle': 'myersmitchell',
        'id': 2,
      }),
      'workflow': 'build_index',
    }),
    'manifest': dict({
      'foo': 2,
    }),
    'modified_otu_count': 2,
    'otus': list([
      dict({
        'change_count': 1,
        'id': 'kjs8sa99',
        'name': 'Foo',
      }),
      dict({
        'change_count': 3,
        'id': 'zxbbvngc',
        'name': 'Test',
      }),
    ]),
    'ready': False,
    'reference': dict({
      'data_type': 'genome',
      'id': 'bar',
      'name': 'Bar',
    }),
    'user': dict({
      'handle': 'myersmitchell',
      'id': 2,
    }),
    'version': 0,
  })
# ---
# name: test_upload[None]
  dict({
    'download_url': '/indexes/foo/files/reference.1.bt2',
    'id': 1,
    'index': 'foo',
    'name': 'reference.1.bt2',
    'size': 4200473,
    'type': 'bowtie2',
  })
# ---
# name: test_upload[None].1
  dict({
    '_id': 'foo',
    'reference': dict({
      'id': 'bar',
    }),
    'user': dict({
      'id': 1,
    }),
  })
# ---
# name: test_upload[None].2
  <SQLIndexFile(id=1, name=reference.1.bt2, index=foo, type=bowtie2, size=4200473)>
# ---
